# add_subdirectory(liblmdb)
add_subdirectory(libmdbx)
if(MSVC)
   # target_compile_options(lmdb PRIVATE /wd4996 /wd4503 /wd4345 /wd4267 /wd4244 /wd4146 /wd4333 /wd4172)
else()
  # Warnings as used by LMDB itself (LMDB_0.9.23)
  # target_compile_options(lmdb PRIVATE -Wall -Wno-unused-parameter -Wbad-function-cast -Wuninitialized)
endif()
